search for table

--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
 </div> <!-- /#header -->
 	<section class="section-wrapper row" style="margin-top: 1%;">
 		<div class="col-sm-5 col-sm-offset-2 myTable" style="margin-top: 5%;">
+			<div class="form-group">
+ 				<input type="text" class="search form-control border-radius " placeholder="Search in results">
+ 			</div>
+ 			<span class="counter"></span>
 			<table id="results" class="table  table-hover results">
 				<thead style="color:#33CC99">
 					<tr>
@@ -227,6 +231,9 @@
 						<th>
 													
 						</th>
+					</tr>
+					<tr class="warning no-result">
+						<td ><i class="fa fa-warning"></i> No result</td>
 					</tr>
 					</thead>
 					<tbody style="color: black;">
